chore/sc-41799/verification-test-plan
binlog read utility forked from repo https://github.com/danfengcao/binlog2sql

--- a/.gitignore
+++ b/.gitignore
@@ -72,8 +72,8 @@ target/
 # IPython Notebook
 .ipynb_checkpoints
 
-# pyenv
-.python-version
+# pyenv ; we commented in for Meetup purposes
+#.python-version
 
 # celery beat schedule file
 celerybeat-schedule
